feat: improve product details to return basic sbom data
